<resources>
    <string name="app_name">MyAccount</string>

    <!-- Login Screen -->
    <string name="login_title">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- My Account Screen -->
    <string name="my_account_title">My Account</string>
    <string name="logout">Logout</string>
    <string name="error_loading_data">Error loading data. Pull down to refresh.</string>

    <!-- General -->
    <string name="loading">Loading...</string>
    <string name="retry">Retry</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
</resources>